[gd_scene load_steps=2 format=3 uid="uid://bf7hkkbryugsr"]

[ext_resource type="Script" uid="uid://ccmncbujsmd4k" path="res://Scripts/UI/TimelineLane.gd" id="1_n3jkw"]

[node name="TimelineLane" type="Panel"]
custom_minimum_size = Vector2(0, 80)
script = ExtResource("1_n3jkw")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 140.0
offset_bottom = 23.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
